correct description in API doc
Signed-off-by: ac892247 <a.chmelo@gmail.com>