@@ -30,6 +30,7 @@ import org.zowe.apiml.util.CorsUtils;
 import reactor.core.publisher.Flux;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -48,7 +49,8 @@ class ServiceCorsUpdaterTest {
     private static final String SERVICE_ID = "myserviceid";
     private static final String APIML_ID = "apimlid";
 
-    private CorsUtils corsUtils = spy(new CorsUtils(true, List.of("GET", "HEAD", "POST", "PATCH", "DELETE", "PUT", "OPTIONS")));
+    List<String> allowedEndpoints = Arrays.asList("/*/*/gateway/**", "/gateway/*/*/**", "/gateway/version");
+    private CorsUtils corsUtils = spy(new CorsUtils(true, List.of("GET", "HEAD", "POST", "PATCH", "DELETE", "PUT", "OPTIONS"), allowedEndpoints));
 
     @Mock
     private ReactiveDiscoveryClient discoveryClient;
@@ -106,7 +108,8 @@ class ServiceCorsUpdaterTest {
 
     @Test
     void givenNoApimlId_whenSetCors_thenServiceIdIsUsed() {
-        TriConsumer<String, String, CorsConfiguration> corsLambda = getCorsLambda(md -> {});
+        TriConsumer<String, String, CorsConfiguration> corsLambda = getCorsLambda(md -> {
+        });
 
         corsLambda.accept(null, SERVICE_ID, null);
 
